--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,7 @@
 layer(base);
 
 @import 'tailwindcss';
-
-
-
+@import "flatpickr/dist/flatpickr.min.css";
 
 @custom-variant dark (&:is(.dark *));
 
